CHANGES IN VERSION 2.9.5
------------------------

CHANGES IN VERSION 2.9.4
------------------------
 o New chromatogram accessors (for pwiz backend only) - see issue #73
   <2017-01-23 Mon>
 
CHANGES IN VERSION 2.9.3
------------------------
 o bump to new Rcpp 0.12.8 version <2017-01-05 Thu>
 
CHANGES IN VERSION 2.9.2
------------------------
 o cleanup CFLAGS and LIBS for libnetcdf
 o add file missing for oaxaca (Apple clang 3.5svn / 600.0.57)
 
CHANGES IN VERSION 2.9.1
------------------------
 o Delete RAMPAdapter pointer in pwiz backend (by jotsetung)
   <2016-11-20 Sun>
 o Use spectra in addition to peaks (see issue #15)
   <2016-12-09 Fri>
 o New pwiz (commit 946d23d75dc70a7a4913d8e05e3d59b9255f278e)

CHANGES IN VERSION 2.9.0
------------------------
 o Bioc devel 3.5
 
CHANGES IN VERSION 2.8.0
------------------------
 o Bioc release 3.4

CHANGES IN VERSION 2.7.13
-------------------------
 o Fix waring on OSX (see issue #60)
 
CHANGES IN VERSION 2.7.12
-------------------------
 o Fixing last warning on MacOS
 
CHANGES IN VERSION 2.7.11
-------------------------
 o Fix failing example and test due to updated msdata::protemics data
 
CHANGES IN VERSION 2.7.10
-------------------------
 o compiling and loading on Windows (hopefully)
 
CHANGES IN VERSION 2.7.9
------------------------
 o Updating Makevars.win 
 
CHANGES IN VERSION 2.7.8
------------------------
 o compile pwiz when installing on Windows <2016-09-26 Mon>
 
CHANGES IN VERSION 2.7.7
------------------------
 o add netcdf static lib; potential incompatibility <2016-09-22 Thu>
 
CHANGES IN VERSION 2.7.6
------------------------
 o new isolationWindow accessor <2016-09-23 Fri>
 
CHANGES IN VERSION 2.7.5
------------------------
 o Apply Martin's free/delete patch - see
   https://github.com/sneumann/mzR/issues/52 <2016-09-22 Thu>
 
CHANGES IN VERSION 2.7.4
------------------------
 o upgrade pwiz
 o ensure file connections are cleaned and closed for pwiz.

CHANGES IN VERSION 2.7.1